@@ -1,22 +1,21 @@
 package com.sb.resnyxbot.anekdot;
 
 import java.io.IOException;
-import java.net.URI;
-import java.time.LocalDateTime;
-import java.time.ZonedDateTime;
-import java.time.format.DateTimeFormatter;
+import java.net.URL;
 import java.util.Collections;
 import java.util.List;
-import java.util.Locale;
 import java.util.Optional;
 
-import com.jcabi.xml.XMLDocument;
 import com.sb.resnyxbot.ResnyxService;
 import com.sb.resnyxbot.prop.Prop;
 import com.sb.resnyxbot.prop.PropRepo;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
+import org.jsoup.Jsoup;
+import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Element;
+import org.jsoup.select.Elements;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import resnyx.TgMethod;
@@ -28,19 +27,18 @@ import resnyx.model.Message;
 @RequiredArgsConstructor
 public final class Anekdot implements ResnyxService {
 
-    private static final DateTimeFormatter DTF = DateTimeFormatter.ofPattern("EEE, dd LLL yyyy HH:mm:ss Z", Locale.US);
-    private static final String URL = "https://www.anekdot.ru/rss/export20.xml";
+    private static final String ANEK_URL = "https://baneks.ru/random";
 
     private final PropRepo propRepo;
 
     @Override
     public List<TgMethod<Message>> answer(String token, Message msg) {
         return Collections.singletonList(
-                new SendMessage(token, msg.getChat().getId(), daily().getText())
+                new SendMessage(token, msg.getChat().getId(), random().getText())
         );
     }
 
-    @Scheduled(cron = "0 0 6-14 * * *")
+    @Scheduled(cron = "0 0 9 * * *")
     public void send() {
         Optional<Prop> tgToken = propRepo.findById("tg.token");
         Optional<Prop> chatId = propRepo.findById("chat.auto.send");
@@ -52,15 +50,10 @@ public final class Anekdot implements ResnyxService {
             LOG.info("chat.auto.send is empty. exit");
             return;
         }
-        Anek daily = daily();
-        Optional<Prop> lastAnek = propRepo.findById("anekdot.lastDate");
-        if (lastAnek.isPresent() && !daily.getDate().isAfter(LocalDateTime.parse(lastAnek.get().getValue()))) {
-            LOG.info("lastDate = {}, daily={}. Exit", lastAnek.get(), daily.getDate());
-            return;
-        }
+        Anek anek = random();
         for (String chId : chatId.get().getValue().split(";")) {
             try {
-                String text = String.format("Анекдот дня:%n%s", daily.getText());
+                String text = String.format("Анекдот дня:%n%s", anek.getText());
                 new SendMessage(
                         tgToken.get().getValue(),
                         Long.valueOf(chId),
@@ -70,17 +63,19 @@ public final class Anekdot implements ResnyxService {
                 LOG.warn(ex.getMessage(), ex);
             }
         }
-        propRepo.save(new Prop("anekdot.lastDate", daily.fmtDate()));
     }
 
     @SneakyThrows
-    public Anek daily() {
-        XMLDocument doc = new XMLDocument(new URI(URL));
-        String pubDateTxt = doc.xpath("//channel/pubDate/text()").get(0);
-        ZonedDateTime pubDate = ZonedDateTime.parse(pubDateTxt, DTF);
-        LOG.debug("pubDate={}", pubDate);
-        String anek = doc.xpath("//channel/item[1]/description/text()").get(0).replace("<br>", "\n");
-        LOG.debug("anek ={}", anek);
-        return new Anek(pubDate.toLocalDateTime(), anek);
+    public Anek random() {
+        Document doc = Jsoup.parse(new URL(ANEK_URL), 5000);
+        String id = doc.getElementsByTag("main").get(0).attr("data-id");
+        String text = "";
+        for (Element view : doc.getElementsByClass("anek-view")) {
+            Elements articles = view.getElementsByTag("article");
+            if (!articles.isEmpty()) {
+                text = articles.get(0).getElementsByTag("p").get(0).html();
+            }
+        }
+        return new Anek(id, text);
     }
 }
